crates/murphy-plugin-macros/tests/ui/fail_node_pattern_capture_in_union.stderr
error: node_pattern!: pattern parse error: `$` capture is not allowed inside `{}` / `!` / `` ` `` (the body has no definite-assignment path) (at 1..3)
 --> tests/ui/fail_node_pattern_capture_in_union.rs:4:40
  |
4 | murphy_plugin_macros::node_pattern!(m, "{$_ int}");
  |                                        ^^^^^^^^^^
