crates/murphy-plugin-macros/tests/ui/fail_node_pattern_capture_in_union.rs
// node_pattern! must reject a `$` capture inside a `{}` union, since a
// union arm cannot bind a capture deterministically in v1.

murphy_plugin_macros::node_pattern!(m, "{$_ int}");

fn main() {}
